_build/html/reports/1_Mittelwert_StdAbw.log
Traceback (most recent call last):
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/site-packages/jupyter_cache/executors/utils.py", line 51, in single_nb_execution
    executenb(
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/asyncio/base_events.py", line 647, in run_until_complete
    return future.result()
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/KSIsleif/opt/anaconda3/lib/python3.9/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------

#Benötigte Libraries:
import numpy as np
import pandas as pd
import matplotlib.pyplot as plt
import plotly.offline as py
py.init_notebook_mode(connected=True)
import plotly.graph_objs as go
import plotly.tools as tls
import seaborn as sns
import time
import warnings
warnings.filterwarnings('ignore')
from myst_nb import glue

from IPython.display import display, Markdown
from IPython.core.magic import register_cell_magic
from IPython import get_ipython
import ast

@register_cell_magic
def md_with_code(line, cell):
    parsed = ast.parse(cell)
    if not parsed:
        return
    
    if isinstance(parsed.body[0], ast.Expr) and isinstance(parsed.body[0].value, ast.Str):
        display(Markdown(parsed.body[0].value.s.strip()))
    get_ipython().run_cell(cell)

del md_with_code



# MatplotLib Settings:
plt.style.use('default') # Matplotlib Style wählen
fig, ax = plt.subplots(figsize=(4,4))
#plt.figure(figsize=(4,4)) # Plot-Größe
#plt.xkcd()
plt.rcParams['font.size'] = 10; # Schriftgröße

# synthetische Messwerte generieren mit weißem Rauschen:
#N = 40
#wahrer_wert = 1.4
#y_wn = np.random.normal(scale=0.05, size=N)
#t_sec = y_wn+1.4
t_sec = np.array([1.41, 1.35, 1.45, 1.43, 1.44, 1.43,
 1.41, 1.32, 1.43, 1.40, 1.49, 1.40,
 1.40, 1.42, 1.40, 1.38, 1.37,  1.36,
# 1.41, 1.36, 1.43, 1.39, 1.38, 1.47, 1.42, 1.40, 1.53, 1.43, 1.36, 1.49, 1.46, 1.48, 1.30, 1.41, 1.51, 1.46,
 1.37, 1.32, 1.47, 1.40])
bconts, bedges, _p = ax.hist(t_sec, bins=np.linspace(1.3, 1.5, 6))
ax.set_ylabel('Absolute Häufigkeit H(x)')
ax.set_xlabel('Klassenverteilung der Zeit (s)')

glue("boot_fig", fig, display=False)

%%md_with_code
```{glue:figure} boot_fig

This is a caption.
```

my_code.execute()
------------------

[0;36m  Cell [0;32mIn[1], line 58[0;36m[0m
[0;31m    ```{glue:figure} boot_fig[0m
[0m    ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (26133079.py, line 58)

